--- a/newcourse.html
+++ b/newcourse.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Api Exercise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -22,13 +22,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="details.html">Details Page</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="newcourse.html">New Courses Page</a>
+                            <a class="nav-link active" aria-current="page" href="newcourse.html">New Courses Page</a>
                         </li>
 
 
@@ -38,6 +38,18 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+    
+                <div class="col">
+                    <table id="table" class="d-flex flex-wrap justify-content-center py-3 shadow">
+                        <th>Course List</th>
+                    </table>
+                </div>
+            </div>
+        </div>
+        </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
