--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                             <a class="nav-link" href="details.html">Details Page</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="newcourse.html">New Courses Page</a>
+                            <a class="nav-link"href="newtodo.html">New Todo Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="edit-todo.html">Edit Todo Page</a>
                         </li>
 
 
